--- a/02 - JS and CSS Clock/index-jm.html
+++ b/02 - JS and CSS Clock/index-jm.html
@@ -80,14 +80,21 @@
 
       const seconds = now.getSeconds();
       const secondsDegree = seconds * 6 + 90;
+      if (secondsDegree===0) {
+        secondHand.style.transition = 'all 0'; 
+      } else {
+        secondHand.style.transition = 'all 0.05s';
+      }
       secondHand.style.transform = `rotate(${secondsDegree}deg)`;
 
       const minutes = now.getMinutes();
       const minutesDegree = minutes * 6 + 90;
       minuteHand.style.transform = `rotate(${minutesDegree}deg)`;
+      console.log(minutes);
+      console.log(minutesDegree);
 
       const hours = now.getHours();
-      const hoursDegree = hours * 6 + 90;
+      const hoursDegree = hours * 360/12 + 90;
       hourHand.style.transform = `rotate(${hoursDegree}deg)`;
     }
 
